--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
     padding: 20px;
     box-shadow: 0px 3px 8px black;
     color: #fefefe;
+    width: 60%;
 }
 
 /* Formulário */
@@ -45,13 +46,13 @@ h3{
     padding: 0.8rem;
     border: none;
     flex: 1;
-    width: 400px;
+    width: 90%;
     border-radius: 10px;
 }
 .form button{
     padding: .8rem;
     min-width: 50px;
-    margin-left: 8px;
+    margin-top: 10px;
     background-color: #999;
     color:white;
     cursor: pointer;
