--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ h3{
     padding: .8rem;
     min-width: 50px;
     margin-top: 10px;
+    margin-left: 10px;
     background-color: #999;
     color:white;
     cursor: pointer;
